--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 ---
 # Project information
-site_name: "Home Assistant Community Add-ons"
+site_name: "Home Assistant Community Add-ons-old"
 site_url: "https://addons.community"
 site_description: "The primary goal of this project is to provide you (as a Home Assistant user) with additional, high quality, add-ons that allow you to take your automated home to the next level."
 site_author: "Franck Nijhof"
@@ -8,7 +8,7 @@ copyright: "Copyright 2017-2020 - Franck Nijhof."
 
 # Repository
 repo_name: "hassio-addons"
-repo_url: "https://github.com/hassio-addons/repository"
+repo_url: "https://github.com/nxwgzs/hassio-addons-repository"
 edit_uri: ""
 
 # Theme configuration
